--- a/index.html
+++ b/index.html
@@ -44,21 +44,33 @@
             </div>
         </div>
     </header>
+    <section class="leader">
+        <div class="leader_elements">
+            <div class="content">
+                <img src="images/mobile/image-interactive.jpg" alt="Image virtual reality" class="virtual_image mobile">
+                <img src="images/desktop/image-interactive.jpg" alt="Image virtual reality" class="virtual_image desktop">
+            </div>
+            <div class="paragraphe_content">
+                <h1>
+                    <p>The leader in</p>
+                    <p>interactive VR</p>
+                </h1>
+                <div class="paragraphe">
+                    <p>Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to
+                        their brand.
+                    </p>
 
-    <div class="content">
-        <img src="images/mobile/image-interactive.jpg" alt="Image virtual reality" class="virtual_image">
-        <h1>
-            <p>The leader in</p>
-            <p>interactive VR</p>
-        </h1>
-        <div class="paragraphe">
-            <p>Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to their brand.</p>
-
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="creations">
-        <h2>Our Creations</h2>
 
+    </section>
+
+
+
+
+    <h2 class="creations_title">Our Creations</h2>
+    <div class="creations_mobile">
         <div class="creations_image">
             <img src="images/mobile/image-deep-earth.jpg" alt="">
             <p>DEEP<br>EARTH</p>
@@ -92,6 +104,41 @@
             <p>MAKE IT<br>FISHEYE</p>
         </div>
     </div>
+    <div class="creations_desktop">
+        <div class="creations_image">
+            <img src="images/desktop/image-deep-earth.jpg" alt="">
+            <p>DEEP<br>EARTH</p>
+        </div>
+        <div class="creations_image">
+            <img src="images/desktop/image-night-arcade.jpg" alt="">
+            <p>NIGHT<br>ARCADE</p>
+        </div>
+        <div class="creations_image">
+            <img src="images/desktop/image-soccer-team.jpg" alt="">
+            <p>SOCCER<br>TEAM VR</p>
+        </div>
+        <div class="creations_image">
+            <img src="images/desktop/image-grid.jpg" alt="">
+            <p>THE<br>GRID</p>
+        </div>
+        <div class="creations_image">
+            <img src="images/desktop/image-from-above.jpg" alt="">
+            <p>FROM UP<br>ABOVE VR</p>
+        </div>
+        <div class="creations_image">
+            <img src="images/desktop/image-pocket-borealis.jpg" alt="">
+            <p>POCKET<br>BOREALIS</p>
+        </div>
+        <div class="creations_image">
+            <img src="images/desktop/image-curiosity.jpg" alt="">
+            <p>THE<br>CURIOSITY</p>
+        </div>
+        <div class="creations_image">
+            <img src="images/desktop/image-fisheye.jpg" alt="">
+            <p>MAKE IT<br>FISHEYE</p>
+        </div>
+    </div>
+
     <div class="button_see">
         <button class="see_all">SEE ALL</button>
     </div>
